# fluorescence-assay

./: .gitattributes  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
fluorescence_assay/: __init__.py  analysis.py  plate_reader.py  plotting.py
fluorescence_assay/tests/: test_fluorescence_assay.py
