[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluorescence_assay"
description = "Parse, analyze, model, and visualize data from fluorescence assay."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Mark Polk", email = "mark.polk@choderalab.org" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
#   "importlib-resources;python_version<'3.10'",
    "beautifulsoup4>=4.11.0",
]

[project.urls]
"Source" = "https://github.com/choderalab/fluorescence-assay"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
fluorescence_assay = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
# default-tag = "1.0.0"

[tool.versioningit.write]
file = "fluorescence_assay/_version.py"
